tests/baselines/reference/objectTypeWithRecursiveWrappedProperty.errors.txt
objectTypeWithRecursiveWrappedProperty.ts(13,1): error TS2322: Type 'List<string>' is not assignable to type 'List<number>'.
  Type 'string' is not assignable to type 'number'.


==== objectTypeWithRecursiveWrappedProperty.ts (1 errors) ====
    // Basic recursive type
    
    class List<T> {
        data: T;
        next: List<List<T>>;
    }
    
    var list1 = new List<number>();
    var list2 = new List<number>();
    var list3 = new List<string>();
    
    list1 = list2; // ok
    list1 = list3; // error
    ~~~~~
!!! error TS2322: Type 'List<string>' is not assignable to type 'List<number>'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.